# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-05-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add availability information to the CloudI Service API
      function services_status based on the uptime_running value
    * Fix the cloudi_core_i_configurator module to use infinity timeouts
      when modifying the CloudI configuration, so it isn't possible to
      have a timeout exception in the middle of adding or removing
      services (i.e., a timeout exception that causes a state
      inconsistency, it is still possible for the cloudi_core_i_configurator
      function call to timeout)

2018-05-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add the CloudI Service API function services_status to provide the
      runtime status of any services at a single point in time
      (it returns dynamic service state information: the number
       of processes/threads, the uptime in hours and the number of restarts)

2018-05-10 Michael Truog   <mjtruog at protonmail dot com>

    * Add service uptime information to all long-lived
      Erlang service processes with the process dictionary
      key cloudi_service_uptime
    * Fix external service crash information format output
      (format_status/2 in erlang crash log)
    * Update uuid

2018-05-03 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP 21.0 compatibility
        * Switch from sasl to kernel logger
          (uses "erlang_kernel.log" file instead of "sasl.log")

2018-04-25 Michael Truog   <mjtruog at protonmail dot com>

    * Disable the Erlang shell command line interface in the ssh daemon
      ran by cloudi_service_router

2018-04-20 Michael Truog   <mjtruog at protonmail dot com>

    * Update cpg

2018-04-12 Michael Truog   <mjtruog at protonmail dot com>

    * Improve Python 3 support in the Python CloudI API
      by avoiding a failure when checking string types
    * Update Ruby source code based on ruby linter
